--- a/httpd.yaml
+++ b/httpd.yaml
@@ -7,6 +7,11 @@ spec:
   selector:
     matchLabels:
       app: httpd
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
