--- a/httpd.yaml
+++ b/httpd.yaml
@@ -25,7 +25,7 @@ spec:
 
       containers:
         - name: httpd
-          image: 10.0.0.150:5000/app1:3
+          image: 10.0.0.150:5000/httpd:4
           imagePullPolicy: Always
           ports:
           - containerPort: 80
