--- a/httpd2-svc.yaml
+++ b/httpd2-svc.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus-svc
+  name: httpd2-svc
 spec:
   type: LoadBalancer
   selector:
-    app: prometheus
+    app: httpd
   ports:
-    - name: prometheus-svc
+    - name: http2-svc
       protocol: TCP
-      port: 9090
-      targetPort: 9090
+      port: 80
+      targetPort: 80
 status:
   loadBalancer:
     ingress:
-    - ip: 10.0.0.81
+    - ip: 10.0.0.80
