--- a/php.yaml
+++ b/php.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: php-deployment
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: php
@@ -19,14 +19,21 @@ spec:
     spec:
       volumes:
         - name: nfs-volume
-          nfs: 
-            server: 10.0.0.63 
-            path: /san/nfs-fs/exports/export1
+          glusterfs:
+            endpoints: glusterfs-cluster
+            path: gfs1
 
       containers:
         - name: php
           image: 10.0.0.150:5000/php:6
           imagePullPolicy: Always
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
           ports:
           - containerPort: 9000
 
