--- a/prometheus-svc.yaml
+++ b/prometheus-svc.yaml
@@ -12,3 +12,8 @@ spec:
       port: 9090
       targetPort: 9090
       nodePort: 30089
+status:
+  loadBalancer:
+    ingress:
+    - ip: 10.0.0.81
+
